Fix sidebar issues on small screens

--- a/intelligent_remote_academia-frontend/src/index.css
+++ b/intelligent_remote_academia-frontend/src/index.css
@@ -178,6 +178,10 @@ input.MuiInputBase-input.MuiInput-input.MuiInputBase-inputMarginDense.MuiInput-i
   background: #233044;
 }
 
+.MuiPaper-root.MuiDrawer-paper.makeStyles-drawerPaper-6.MuiDrawer-paperAnchorLeft.MuiPaper-elevation16 {
+  background: #233044;
+}
+
 .break {
   flex-basis: 100%;
   height: 0;
